src/components/UI/ToastMessage/ToastMessage.module.css
.Message {
  color: #93a29b !important;
  border-radius: 12px !important;
  padding-left: 32px !important;
  font-size: 16px !important;
  font-weight: 400;
}

.Success {
  background-color: #073f24 !important;
}

.Warning {
  background-color: #550707 !important;
}

.Error {
  background-color: #550707 !important;
}

.Action {
  cursor: pointer;
  align-items: center !important;
  padding: 0px !important;
  margin-right: 0px !important;
  padding-left: 0px !important;
  margin-left: 32px !important;
}

.SnackBar {
  top: 48px !important;
}

